--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/hapi": "^20.2.1",
+    "@hapi/hapi": "20.2.1",
     "@hapi/inert": "^7.0.0",
     "@hapi/vision": "^7.0.0",
     "dotenv": "^16.0.2",
     "hapi-pino": "^10.2.0",
-    "hapi-swagger": "^14.5.5",
+    "hapi-swagger": "14.5.0",
     "joi": "^17.6.0",
     "luxon": "^3.0.3",
     "pg": "^8.8.0"
